# Cluster-of-upcycled-smartphones

./: .gitignore  Change_root_partition.md  Dockerfile  Dockerfile_Old  K3S_Troubleshooting.md  K3S_new.md  NEW_TensorFlow_build_instructions.md  Perpetronic_toolchains.md  README.md  Smartphone_Setup.md  TensorFlow_build_instructions.md  k3s.md  loadbalancer-service  nodeport-service
Benchmark/FlaskApp/: 3r_response_times.txt  4rep_response_times.txt  ld_response_times.txt  response_times.txt  simple_benchmark.sh
Benchmark/NPF/: NPF_STEPS.md  build_graphs.py  result_alone.csv  results_4s.csv  results_c.csv  simple_benchmark.npf  simple_cluster_benchmark.npf  simple_test.npf
Benchmark/cluster/: cluster_experiments.ipynb
Benchmark/homemade/: benchmark.sh  benchmark_cpuload.sh  cpu_usage_graph.py  script_cpu_usage.sh
Benchmark/networking/: device_networking_capabilities_experiments.ipynb
Benchmark/tflite_application/: tflite_application_experiments.ipynb
Benchmark/wrk/: WRK_STEPS.md  log_resp_script.lua  post_script.lua  (+1 more)
Crow/opencv_test/: CMakeLists.txt
FlaskApp/: app.py  deployment.yaml  service.yaml
K3S/: Dockerfile  K3S_setup.md  deployment.yaml  service.yaml
Legacy_work/: WiFi-setup.md
NPF_REPO_SAVE/: cpuload_test.npf  simple_test.npf
Planning/: Planning.md  TODO.md
TensorFlow Lite/: Build_Instructions.md
Usecase_Applications/: Build_Instructions.md  Dockerfile  README.md  TensorFlow_build_instructions.md
Usecase_Applications/src/crow_server/: CMakeLists.txt  crow_webserver.cc  crow_webserver.h
Usecase_Applications/src/object_detection/: CMakeLists.txt  README.md  object_detection.cc  object_detection.h
setup_scripts/: all_devs_ip_setup.sh  dev_ip_setup.sh
(+1894 files in other folders)
